--- a/test.html
+++ b/test.html
@@ -8,5 +8,6 @@
 	<h1>Hello, world!</h1>
 	<h2>It is first copy of this document</h2>
 	<h2>This is change</h2>
+	<h2>This is second change</h2>
 </body>
 </html>
